2024-12-27T01:41:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12510495960 # 522
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-27
* notice: last 14d: unq all: 3 1695
* notice: prev accum: outdated-unq outdated-all / unq all: 2343 237094 / 2361 238858
* notice: next accum: outdated-unq outdated-all / unq all: 2344 237218 / 2362 238988
* notice: prev exec diff / last date diff / accum: unq all: +1 +130 -0 -75 / +1 +128 -0 -0 / 1 128
* notice: removed / changed dates: [2024-12-12] / [2024-12-13 2024-12-25 2024-12-26]

2024-12-26T01:41:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12498348565 # 521
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-26
* notice: last 14d: unq all: 3 1689
* notice: prev accum: outdated-unq outdated-all / unq all: 2341 236970 / 2359 238729
* notice: next accum: outdated-unq outdated-all / unq all: 2343 237094 / 2361 238858
* notice: prev exec diff / last date diff / accum: unq all: +2 +129 -0 -75 / +2 +127 -0 -0 / 2 127
* notice: removed / changed dates: [2024-12-11] / [2024-12-12 2024-12-24 2024-12-25]

2024-12-25T01:40:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12488111404 # 520
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-25
* notice: last 14d: unq all: 4 1684
* notice: prev accum: outdated-unq outdated-all / unq all: 2340 236847 / 2358 238601
* notice: next accum: outdated-unq outdated-all / unq all: 2341 236970 / 2359 238729
* notice: prev exec diff / last date diff / accum: unq all: +1 +128 -0 -75 / +1 +126 -0 -0 / 1 126
* notice: removed / changed dates: [2024-12-10] / [2024-12-11 2024-12-23 2024-12-24]

2024-12-24T01:42:03Z: