@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-12-27T01:41:52Z",
-  "count_outdated" : 237218,
-  "uniques_outdated" : 2344,
-  "count" : 238988,
-  "uniques" : 2362,
+  "timestamp" : "2024-12-28T01:39:44Z",
+  "count_outdated" : 237342,
+  "uniques_outdated" : 2345,
+  "count" : 239114,
+  "uniques" : 2363,
   "clones" : [
     {
-      "timestamp": "2024-12-13T00:00:00Z",
-      "count": 49,
-      "count_minmax": [ 20, 124 ],
-      "count_decinc": [ 75, 124 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-12-14T00:00:00Z",
-      "count": 127,
+      "count": 52,
       "count_minmax": [ 24, 127 ],
-      "count_decinc": [ 0, 127 ],
+      "count_decinc": [ 75, 127 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +118,15 @@
       "count": 128,
       "count_minmax": [ 128, 128 ],
       "count_decinc": [ 0, 128 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-27T00:00:00Z",
+      "count": 126,
+      "count_minmax": [ 126, 126 ],
+      "count_decinc": [ 0, 126 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
