@@ -1,15 +1,10 @@
 {
-  "count": 1695,
+  "count": 1697,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-12-13T00:00:00Z",
-      "count": 49,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-12-14T00:00:00Z",
-      "count": 127,
+      "count": 52,
       "uniques": 1
     },
     {
@@ -70,6 +65,11 @@
     {
       "timestamp": "2024-12-26T00:00:00Z",
       "count": 128,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-27T00:00:00Z",
+      "count": 126,
       "uniques": 1
     }
   ]
